@@ -18,7 +18,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<lombok.version>1.18.44</lombok.version>
+		<lombok.version>1.18.36</lombok.version>
 	</properties>
 
 	<dependencies>
@@ -123,10 +123,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.13.0</version>
+				<version>3.12.1</version>
 				<configuration>
-					<release>17</release>
 					<parameters>true</parameters>
+					<release>17</release>
+					<compilerArgs>
+						<arg>--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+					</compilerArgs>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
